fixed mobile spacing issue where text was way too close together

--- a/src/components/ContactForm/form/style.module.scss
+++ b/src/components/ContactForm/form/style.module.scss
@@ -1,133 +1,167 @@
 @import "../../../scss/variables/colors.scss";
 
-.field {
-  width: 100%;
-  position: relative;
-  padding: 2rem 5rem 4rem 5rem;
+.formContainer {
+  display: flex;
+  flex-direction: column;
   pointer-events: all;
+  border: none;
+  padding: 2rem;
+  position: relative;
+  width: 100%;
+  margin: auto;
+  background: transparent;
+}
 
-  &.visited {
-    .label {
-      transform: translate(-2rem, -3rem);
-    }
-  }
+.form {
+  position: relative;
+  margin: auto;
+  background: inherit;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  margin: 2.5rem 0;
 
   .label {
+    font-family: prohibition, sans-serrif;
+    position: absolute;
+    top: 0;
     font-size: 2rem;
-    position: absolute;
-    top: 2rem;
-    left: 7rem;
+    transition: transform 0.4s, color 0.5s;
     color: white;
-    transition: transform 0.5s;
   }
 
-  input {
-    width: inherit;
-    display: block;
-    border-radius: 4px;
-    font-size: 1.5rem;
-    padding: 1rem 1rem;
-    color: white;
+  .input,
+  .textarea {
+    padding: 1rem;
+    border: none;
+    border-bottom: 1px solid rgba(white, 0.1);
     background: transparent;
-    border: 1px solid rgba(white, 0.6);
-    border-radius: 5px;
+    color: white;
 
-    &::placeholder {
-      opacity: 0;
-    }
     &:focus {
-      outline: 1px solid white;
-      background: transparent;
+      outline: none;
+      border-bottom: 1px solid white;
     }
   }
-  .textArea {
-    display: inline-block;
-    width: 100%;
-    font-size: 1.5rem;
-    border: 1px solid black;
-    color: black;
-    min-height: 10rem;
-    color: white;
-    background: transparent;
-    border: 1px solid rgba(white, 0.6);
-    border-radius: 5px;
+
+  .textarea {
     resize: none;
-
-    &:focus {
-      outline: 1px solid white;
-      background: transparent;
-    }
-  }
-
-  .error {
-    color: red;
-  }
-
-  .errorMsg {
-    position: absolute;
-    bottom: 0;
-    left: 5rem;
+    min-height: 10rem;
   }
 
   &.invert {
+    .input,
+    .textarea,
     .label {
       color: black;
     }
-
-    .input {
-      color: black;
-      border: 1px solid rgba(black, 0.5);
+    .input,
+    .textarea {
+      border-bottom: 1px solid rgba(black, 0.1);
 
       &:focus {
-        outline: 1px solid black;
+        border-bottom: 1px solid black;
       }
     }
+  }
 
-    .textArea {
-      color: black;
-      border: 1px solid rgba(black, 0.5);
-      &:focus {
-        outline: 1px solid black;
-      }
+  &.visited {
+    .label {
+      transform: translateY(-100%);
     }
   }
 
   &.error {
-    .textArea,
+    .textarea,
     .input {
-      border: 1px solid red;
-    }
-
-    .label {
-      color: red;
+      border-bottom: 1px solid $color-red-error;
     }
   }
 }
 
-.submit {
-  pointer-events: all;
+.errorMsg {
+  font-family: prohibition, sans-serrif;
 
-  transform: translateX(300px);
+  min-height: 2rem;
+  margin: 0.5rem 0;
+  color: $color-red-error;
+
+  p {
+    animation: fadeIn 1s;
+  }
+
+  &.formErr {
+    font-size: 1.5rem;
+    text-align: center;
+  }
 }
 
-@media only screen and (max-width: 900px) {
-  .field {
-    padding-top: 1rem;
+.send {
+  background: transparent;
+  border: none;
+  width: 15rem;
 
-    .input {
-      padding: 1rem 0;
-      font-size: 1rem;
-    }
-    .label {
-      top: 1rem;
-    }
-    .textArea {
-      font-size: 1rem;
-      min-height: 6rem;
-    }
-    .errorMsg {
-      top: 60%;
-      left: 5rem;
+  color: white;
+  padding: 1rem;
+  font-size: 2rem;
+  margin: 0 auto;
+  position: relative;
+  z-index: 45;
+
+  &:focus {
+    outline: none;
+  }
+}
+
+.check {
+  opacity: 0;
+}
+
+.movingCircle {
+  opacity: 1;
+}
+
+.confirm {
+  overflow: hidden;
+  background: black;
+  position: absolute;
+  bottom: 0rem;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 2;
+  transform-origin: 50% bottom;
+  transform: scaleY(0);
+
+  &.invert {
+    background: white;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@media only screen and (max-width: 37.5em) {
+  .sendBtn {
+    width: 10rem;
+  }
+
+  .field {
+    margin: 1rem 0;
+
+    .input,
+    .textarea {
+      border-bottom: 1px solid white;
     }
   }
 }
